--- a/index.html
+++ b/index.html
@@ -13,22 +13,13 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Информация для украинцев в Вольфсбурге
-                    <br>
-                    Information für Ukrainer in Wolfsburg
-                </h1>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore ab, tempora voluptas facilis debitis repellat sequi nesciunt, laboriosam nihil atque, autem earum assumenda obcaecati? Quod accusamus assumenda harum ipsum ratione dolores nulla nobis libero molestiae laborum voluptatem odit, illum distinctio placeat. Enim porro obcaecati earum architecto, accusantium animi asperiores blanditiis.
-        
-                </p>
-                <br>
-                <p>
-                    Профессиональное образование на производстве (также называемое дуальным профессиональным образованием) является наиболее распространенным видом профессионального образования в Германии. При этом обучение проходит как на производстве, так и в профессиональном училище. Существует свыше 320 специальностей, приобретаемых в процессе профессионального образования.
-                </p>
-                <br>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi animi quasi delectus provident quod maiores ducimus expedita, voluptate accusantium, placeat temporibus eaque illo similique officia consectetur fuga magnam recusandae iure, ut repellat. Officia veritatis debitis perferendis itaque fuga blanditiis eius dolorum et. Sit adipisci dolorum saepe, ab neque autem assumenda.</span>
+                <h1>Hello World </h1>
             </div>
         </div>
     </div>
+    <!-- jQuery-->
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+    <!-- JS- Scrits-->
+    <script src="js/script.js"></script>
 </body>
 </html>
