--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Hello World </h1>
+                <h1>Hello World</h1>
             </div>
         </div>
     </div>
     <!-- jQuery-->
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <!-- JS- Scrits-->
-    <script src="js/script.js"></script>
+    <script src="js/scrtipt.js"></script>
 </body>
 </html>
