--- a/index.html
+++ b/index.html
@@ -10,16 +10,58 @@
     <link rel="stylesheet" href="css/simple-grid.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h1>Hello World </h1>
+    <header class="header">
+        <div class="container">
+            <div class="header__body">
+                <a href="" class="header__logo">
+                    <img src="img/logo_wob.jpg" alt="Logo">
+                </a>
+                <div class="header__burger">
+                    <span></span>
+                </div>
+                <div class="nav header__menu">
+                    <ul class="header__list">
+                        <li>
+                            <a href="#" class="header__link">Link #1</a>
+                        </li>
+                        <li>
+                            <a href="#" class="header__link">Link #2</a>
+                        </li>
+                        <li>
+                            <a href="#" class="header__link">Link #3</a>
+                        </li>
+                        <li>
+                            <a href="#" class="header__link">Link #4</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
+    </header>
+    <div class="container content">
+        <div class="row">
+            <div class="col-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil sapiente impedit quo rerum aperiam molestias? Expedita rerum voluptate molestiae officia nisi, ad iste porro, architecto perspiciatis eius, ipsum praesentium reprehenderit atque sunt. Voluptatibus maiores eius, recusandae similique itaque quos soluta culpa, aliquid ex fugiat repellendus expedita. Voluptatem expedita minima ad.</div>
+            <div class="col-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dicta officia reprehenderit, exercitationem dignissimos nostrum iste eligendi amet vel quam veritatis nulla ex fugit animi quae ab beatae eius? Veniam officiis earum, quis eum omnis, perferendis perspiciatis mollitia nemo minus commodi labore praesentium fuga id soluta accusamus fugiat odit beatae quibusdam dignissimos facere porro fugit vitae. Eligendi esse praesentium pariatur quaerat officiis, explicabo officia, exercitationem excepturi qui asperiores voluptates fugit tempore, cumque consequuntur voluptatum recusandae facere nulla rem. Voluptates quas ut totam reprehenderit minima et nam quae illo vero natus. Delectus veniam tempore nisi necessitatibus fugit accusamus ipsam earum et.</div>
+        </div>
+        <div class="row">
+            <div class="col-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. A sunt temporibus enim, dolorum mollitia minus consequatur quaerat consequuntur eum ratione incidunt rerum quo deserunt distinctio iusto quasi ullam, repellendus nemo. Fugit, vel nulla! At fugiat sunt, iste perferendis quisquam eos eum dolorum voluptate aliquid consectetur recusandae? Odio velit, vel dolor iusto officiis laboriosam? Laudantium inventore voluptates beatae natus ipsum aliquid necessitatibus earum fuga quisquam facilis? Dolores molestias ipsa ab ipsam atque earum corporis alias, quo repellendus voluptatum omnis repudiandae, impedit quisquam perspiciatis eius. Voluptate asperiores quis, error, iusto omnis cupiditate accusantium quod aliquid labore voluptas, impedit non quasi porro dolorum?</div>
+            <div class="col-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perspiciatis culpa reiciendis? Ab, ea. Quo adipisci voluptas illo corrupti impedit libero officiis saepe sapiente voluptatum ea ex hic, non fugiat laudantium suscipit, molestias odit. Veritatis dolorum, eius perspiciatis deleniti animi hic sit ad natus ipsum maiores maxime nostrum doloribus fuga?</div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi perspiciatis delectus neque, asperiores quae ipsa ducimus, tenetur, eveniet hic accusantium ut illo natus similique odit quisquam excepturi earum fuga harum sunt. Pariatur repudiandae ipsa quas! Sequi molestiae in assumenda, eveniet excepturi blanditiis adipisci eaque saepe pariatur vero officiis neque impedit unde amet laborum consectetur earum, provident nesciunt quo. Dicta magnam possimus ad a maiores fugit eos, pariatur quod quidem nobis. Est quae ipsum asperiores laudantium nesciunt? Rerum at cumque illum nemo facilis dolor laborum totam doloribus! Voluptates, officiis consequatur unde asperiores sed sunt voluptatum rem aperiam corrupti nisi magnam dolor corporis id quaerat cumque! Quo aliquid, repudiandae autem voluptates explicabo fugiat aperiam temporibus est repellat! Et, saepe! Nesciunt error porro, ab iste accusamus, suscipit reprehenderit earum molestiae cumque fuga nulla pariatur expedita amet provident impedit adipisci ut nemo quia itaque ex minus repellat nisi inventore sint. Voluptatum earum distinctio nemo qui consectetur quae maiores quisquam architecto et labore! Enim omnis labore magni minima cumque, perspiciatis repellat odio qui temporibus culpa nam hic quod sint facere doloremque amet ratione recusandae sed, illo nesciunt! Deleniti ipsa aperiam exercitationem qui. At dolor similique nemo ullam quisquam suscipit? Corrupti, officiis, provident minus recusandae distinctio dolorem voluptas esse beatae quas autem nisi aperiam dicta omnis neque ducimus optio consectetur repellendus quod deserunt repellat quia enim! Quo, quas hic! Alias nisi, iure aspernatur eveniet labore minus sequi. Unde, pariatur cumque aliquid debitis dolorum optio fugit quibusdam voluptatibus accusantium ut commodi consequatur esse, a quam eum provident laudantium accusamus aspernatur facere, nostrum quis amet at illum distinctio. Cupiditate quae perferendis necessitatibus, dolorem aliquid voluptate nemo ea error esse nesciunt deleniti libero quidem at totam, laborum impedit neque enim sed pariatur eos. Blanditiis cumque, alias quaerat ex ea aliquam excepturi? Autem laudantium voluptate ipsum dicta, aut nam aperiam sint nihil maiores quia iste excepturi dolore, odit id mollitia ut quae distinctio optio, fugiat amet! Ab illo ratione harum neque modi repudiandae veritatis beatae, pariatur quos accusamus, eaque optio debitis, ducimus animi quaerat quas hic facilis praesentium nulla possimus at facere aliquam ipsam rerum. Odio vel in, animi harum hic ex quidem pariatur quaerat, at voluptate voluptatem neque ad fugiat sed recusandae quia cumque autem aperiam dolor iusto deleniti! Quos nostrum necessitatibus tempore mollitia eos illo officiis sequi earum minima, iusto eveniet id, excepturi repudiandae enim fugit perferendis dolores repellat quas commodi. Iure suscipit facere explicabo vel nobis labore, pariatur qui? A nostrum laborum explicabo quos repudiandae ab numquam beatae quae maxime, mollitia exercitationem, voluptate corporis officia iusto nulla fugit eos eius alias earum recusandae vero. Vitae, ipsa assumenda accusantium reiciendis quos aliquam explicabo fuga 
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae quis cupiditate voluptates amet velit vero quo laudantium incidunt sint aliquid!</div>
+            <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quia mollitia placeat quo error laudantium unde omnis deleniti impedit consequatur.</div>
+            <div class="col-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia iure rem placeat amet atque quisquam at velit, ut ex corrupti.</div>
+            <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus neque, dignissimos nobis, commodi omnis explicabo rerum deserunt fugiat, consequatur incidunt quasi qui repellat excepturi ipsum? Earum dignissimos ab explicabo repudiandae?</div>
+        </div>
     </div>
-    <!-- jQuery-->
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-    <!-- JS- Scrits-->
+    <!-- Jquery 3.4.1 -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- IBG / Menu Burger / Scroll-to -->
     <script src="js/script.js"></script>
 </body>
 </html>
