--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus neque, dignissimos nobis, commodi omnis explicabo rerum deserunt fugiat, consequatur incidunt quasi qui repellat excepturi ipsum? Earum dignissimos ab explicabo repudiandae?</div>
         </div>
     </div>
-    <!-- Jquery 3.4.1 -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <!-- IBG / Menu Burger / Scroll-to -->
     <script src="js/script.js"></script>
 </body>
