--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-    <!-- IBG / Menu Burger / Scroll-to -->
-    <script src="js/script.js"></script>
+    <!-- JS- Scrits-->
+    <script src="js/scrtipt.js"></script>
 </body>
 </html>
