--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <!-- JS- Scrits-->
-    <script src="js/scrtipt.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
